Fix for height calculations on mobile browser UIs
This is a workaround for the fact that the `vh` CSS unit is unreliable on mobile browsers.

--- a/src/styles/wall.css
+++ b/src/styles/wall.css
@@ -1,6 +1,7 @@
 body {
   -webkit-tap-highlight-color: transparent;
-  height: 100vh;
+  height: calc(var(--vh, 1vh) * 100); /* see script.js#setVh */
+  min-height: -webkit-fill-available;
   overflow: hidden;
 }
 
